Formatted according to FSU specs (nolinkurl in the bib, black refs and expanded spacing). Expanded spacing is killing me...im at 190 pages

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -18,11 +18,11 @@
     hyperindex=true,		% Make numbers of index links as well
    	backref=page, 		% Provide page listing where refs occur in the bibliography
 	%breaklinks=true,
-    colorlinks,%
-    citecolor=green,%
-    filecolor=blue,%
-    linkcolor=red,%
-    urlcolor=red, 
+    %colorlinks,%
+    %citecolor=green,%
+    %filecolor=blue,%
+    %linkcolor=red,%
+    %urlcolor=red, 
 ]{hyperref}
 
 \usepackage{dsfont}
