--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -283,7 +283,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 	Date-Modified = {2013-10-25 04:40:07 +0000},
 	Month = may,
 	Title = {{OpenMP} Application Program Interface Version 3.0},
-	Url = {\url{http://www.openmp.org/mp-documents/spec30.pdf}},
+	Url = {\nolinkurl{http://www.openmp.org/mp-documents/spec30.pdf}},
 	Year = 2008,
 	Bdsk-Url-1 = {http://www.openmp.org/mp-documents/spec30.pdf}}
 
@@ -341,7 +341,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 	Author = {David Porter},
 	Date-Added = {2013-10-13 18:56:35 +0000},
 	Date-Modified = {2013-10-13 19:28:31 +0000},
-	Howpublished = {Tutorial Slides, \url{http://msi.umn.edu/~porter/tutorials/old1/Itasca_fin2.pdf}},
+	Howpublished = {Tutorial Slides, \nolinkurl{http://msi.umn.edu/~porter/tutorials/old1/Itasca_fin2.pdf}},
 	Title = {{Itasca's IB Fabric}},
 	Year = {2009}}
 
@@ -395,7 +395,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 	Author = {E. F. Bollig},
 	Date-Added = {2013-09-29 18:40:31 +0000},
 	Date-Modified = {2013-09-29 18:43:38 +0000},
-	Howpublished = {\url{https://github.com/bollig/rbffd_gpu}},
+	Howpublished = {\nolinkurl{https://github.com/bollig/rbffd_gpu}},
 	Month = {Sep},
 	Title = {Radial Basis Function Finite Differences on the GPU},
 	Year = {2013}}
@@ -480,7 +480,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 	Author = {J. Kraus},
 	Date-Added = {2013-09-16 03:31:46 +0000},
 	Date-Modified = {2013-09-16 03:32:22 +0000},
-	Howpublished = {\url{https://developer.nvidia.com/content/introduction-cuda-aware-mpi}},
+	Howpublished = {\nolinkurl{https://developer.nvidia.com/content/introduction-cuda-aware-mpi}},
 	Month = {March},
 	Title = {An Introduction to CUDA-Aware MPI},
 	Year = {2013}}
@@ -533,7 +533,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 @misc{KeplerFactSheet,
 	Date-Added = {2013-09-11 18:47:49 +0000},
 	Date-Modified = {2013-09-11 18:48:37 +0000},
-	Howpublished = {\url{http://www.nvidia.com/content/tesla/pdf/Tesla-KSeries-Overview-LR.pdf}},
+	Howpublished = {\nolinkurl{http://www.nvidia.com/content/tesla/pdf/Tesla-KSeries-Overview-LR.pdf}},
 	Month = {Oct},
 	Title = {TESLA KEPLER GPU Accelerators},
 	Year = {2012}}
@@ -626,7 +626,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 @misc{MSIItasca,
 	Date-Added = {2013-09-02 22:59:23 +0000},
 	Date-Modified = {2013-09-02 23:01:09 +0000},
-	Howpublished = {\url{https://www.msi.umn.edu/hpc/itasca}},
+	Howpublished = {\nolinkurl{https://www.msi.umn.edu/hpc/itasca}},
 	Month = {June},
 	Title = {Itasca (HP ProLiant BL280c G6 Linux Cluster)},
 	Year = {2013}}
@@ -635,7 +635,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 	Author = {E. F. Bollig},
 	Date-Added = {2013-09-02 16:57:28 +0000},
 	Date-Modified = {2013-09-02 16:59:31 +0000},
-	Howpublished = {\url{https://github.com/bollig/rbf_hash_query}},
+	Howpublished = {\nolinkurl{https://github.com/bollig/rbf_hash_query}},
 	Title = {A Fixed-Grid Prototype for RBF Stencil Generation With Various Space Filling Curves},
 	Year = {2012}}
 
@@ -706,7 +706,7 @@ here is to evaluate the Block Jacobi, Parallel ILU and Sparse approximate invers
 	Author = {Andrea Tagliasacchi},
 	Date-Added = {2013-08-15 20:18:12 +0000},
 	Date-Modified = {2013-08-15 20:24:34 +0000},
-	Howpublished = {\url{https://code.google.com/p/kdtree-matlab}},
+	Howpublished = {\nolinkurl{https://code.google.com/p/kdtree-matlab}},
 	Month = {Jun},
 	Title = {kd-tree matlab},
 	Year = {2012}}
@@ -830,7 +830,7 @@ work. A list of this and other possible avenues for future work is also included
 	Author = {Andrea Tagliasacchi},
 	Date-Added = {2013-08-11 07:13:20 +0000},
 	Date-Modified = {2013-08-12 03:42:09 +0000},
-	Howpublished = {\url{http://www.mathworks.com/matlabcentral/fileexchange/21512-kd-tree-for-matlab}},
+	Howpublished = {\nolinkurl{http://www.mathworks.com/matlabcentral/fileexchange/21512-kd-tree-for-matlab}},
 	Month = {Sep},
 	Title = {kd-tree for matlab},
 	Year = {2010}}
@@ -838,7 +838,7 @@ work. A list of this and other possible avenues for future work is also included
 @misc{MatlabKDTreeSearcher,
 	Date-Added = {2013-08-11 06:19:49 +0000},
 	Date-Modified = {2013-08-11 06:21:31 +0000},
-	Howpublished = {MATLAB R2013a Documentation (\url{http://www.mathworks.com/help/stats/kdtreesearcherclass.html})},
+	Howpublished = {MATLAB R2013a Documentation (\nolinkurl{http://www.mathworks.com/help/stats/kdtreesearcherclass.html})},
 	Month = {Aug},
 	Title = {KDTreeSearcher Class},
 	Year = {2013}}
@@ -874,7 +874,7 @@ work. A list of this and other possible avenues for future work is also included
 	Author = {E. F. Bollig},
 	Date-Added = {2013-08-05 07:28:46 +0000},
 	Date-Modified = {2013-08-05 08:08:34 +0000},
-	Howpublished = {\url{https://github.com/bollig/sphere_grids}},
+	Howpublished = {\nolinkurl{https://github.com/bollig/sphere_grids}},
 	Month = {Aug},
 	Title = {Sphere Grids},
 	Year = {2012}}
@@ -883,7 +883,7 @@ work. A list of this and other possible avenues for future work is also included
 	Author = {R. Womersley},
 	Date-Added = {2013-08-05 07:03:42 +0000},
 	Date-Modified = {2013-08-05 07:29:13 +0000},
-	Howpublished = {\url{http://web.maths.unsw.edu.au/~rsw/Sphere/Extremal/New/index.html}},
+	Howpublished = {\nolinkurl{http://web.maths.unsw.edu.au/~rsw/Sphere/Extremal/New/index.html}},
 	Month = {Oct},
 	Title = {Extremal (Maximum Determinant) points on the sphere {$S^2$}},
 	Year = {2007}}
@@ -1043,7 +1043,7 @@ work. A list of this and other possible avenues for future work is also included
 	Author = {Sylvie Barak},
 	Date-Added = {2012-08-11 22:07:56 -0400},
 	Date-Modified = {2013-08-05 07:31:56 +0000},
-	Howpublished = {\url{http://www.eetimes.com/electronics-news/4230659/GPU-technology-key-to-exascale-says-Nvidia}},
+	Howpublished = {\nolinkurl{http://www.eetimes.com/electronics-news/4230659/GPU-technology-key-to-exascale-says-Nvidia}},
 	Month = {November},
 	Title = {GPU technology key to exascale says Nvidia},
 	Year = {2011}}
