--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -155,8 +155,8 @@ This work leverages a domain decomposition; although, not for the purpose of con
          % Use a star or cross to denote OpenMP + MPI. 
                                     & \multicolumn{2}{C{0.2\textwidth}||}{Multi-CPU ($^\star$:MPI+OpenMP)} & \multicolumn{3}{C{0.3\textwidth}||}{Single GPU} & \multicolumn{2}{C{0.23\textwidth}||}{Multi-GPU ($^\dag$:Non-overlapped, $^\ddag$:Overlapped)} \\ \cline{2-8}
                                     & OpenMP & MPI & CUDA     & OpenCL     & Other     & CUDA     & OpenCL   \\ \hline
-             RBF-FD                 &            &         &          &            &            &          & \cite{BolligFlyerErlebacher2012}$^{\dag}$ \mbox{[This Work]$^{\ddag}$}  \\ \hline
-             RBF PDE Methods  &  \cite{Kosec2008}   & \cite{Divo2005, Divo2007, Ingber2003,Ingber2004,Yokota2010} & \cite{Schmidt2009a,Schmidt2009b,Gumerov2007a, Gumerov2007b} &    &   &   &  \\ \hline
+             RBF-FD                 &            &         &          &            &            &          & \cite{BolligFlyerErlebacher2012}$^{\dag}$ \mbox{[This Work]$^{\ddag}$}  \\ 		\hdashline
+             RBF PDE Methods  &  \cite{Kosec2008}   & \cite{Divo2005, Divo2007, Ingber2003,Ingber2004,Yokota2010} & \cite{Schmidt2009a,Schmidt2009b,Gumerov2007a, Gumerov2007b} &    &   &   &  \\ 		\hdashline
              Non-PDE RBF Methods    &         &    \cite{Strey2003}$^{\star}$      &  \cite{Cuomo2013,Cuntz2007}  &   &  \cite{Corrigan2005,Weiler2005,Carr2003,Brandstetter2008}  &   &      \\ \hline \hline
              Non-RBF PDE Methods    &     &   \cite{Schubert2011}$^{\star}$    &  \cite{Corrigan2009}  &      &      &   \cite{Goeddeke2007,Goeddeke2008a,Goeddeke2009a, Goeddeke2008b, Thibault2009, Phillips2009,Komatitsch2009}$^{\dag}$ \quad \cite{Minden2010, YokotaGPU2010, Phillips2010,Komatitsch2010b,Komatitsch2010a}$^\ddag$ &  \\ \hline
     \end{tabular}
