--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -1,5 +1,5 @@
-\documentclass[11pt,expanded]{fsuthesis}
-
+\documentclass[11pt]{fsuthesis}
+%,expanded
 \usepackage{standalone}
 \input{all_usepackages}
 
